# tinyvla

./: .gitignore  QUICKSTART_12GB.md  README.md  config.yaml  config_12gb.yaml  config_2gb_test.yaml  config_8gb_aggressive.yaml  pyproject.toml  quick_eval.py  setup.sh  test_2b_model.sh  tinyvla.py  tinyvla_memory_optimized.py  visualize_eval.py
