[project]
name = "tinyvla"
version = "0.1.0"
description = "Train VLA-0 vision-language-action models on LIBERO"
authors = [{name = "Your Name", email = "you@example.com"}]
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "transformers>=4.45.0",
    "accelerate>=0.25.0",
    "trl>=0.11.0",
    "qwen-vl-utils",
    "einops",
    "pillow",
    "numpy",
    "tqdm",
]

[project.optional-dependencies]
eval = [
    "libero @ git+https://github.com/Lifelong-Robot-Learning/LIBERO.git",
    "robosuite>=1.4.0",
    "h5py",
    "imageio",
]
lora = [
    "peft>=0.7.0",
    "bitsandbytes>=0.41.0",
]
dev = [
    "pytest",
    "black",
    "ruff",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 120
target-version = "py310"